feat: rebrand to RUFUS and harden semantic intent execution

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shaggy</title>
-    <link rel="icon" type="image/png" href="/static/shaggy.png?v=20260224_5">
-    <link rel="apple-touch-icon" href="/static/shaggy.png?v=20260224_5">
+    <title>RUFÜS</title>
+    <link rel="icon" type="image/png" href="/static/rufus.png?v=20260227_2">
+    <link rel="apple-touch-icon" href="/static/rufus.png?v=20260227_2">
     <link rel="stylesheet" href="/static/style.css?v=20260226_1">
 </head>
 <body>
@@ -14,10 +14,10 @@
         <div class="header-content">
             <div class="header-left">
                 <div class="avatar">
-                    <img src="/static/shaggy.png?v=20260224_5" alt="Shaggy">
+                    <img src="/static/rufus.png?v=20260227_2" alt="RUFÜS">
                 </div>
                 <div class="header-info">
-                    <h1 class="header-name">Shaggy</h1>
+                    <h1 class="header-name">RUFÜS</h1>
                     <div class="status">
                         <span class="status-dot" id="statusDot"></span>
                         <span class="status-text" id="statusText">Conectando...</span>
@@ -44,7 +44,7 @@
         <div class="chat-messages" id="chatMessages">
             <!-- Mensaje de bienvenida -->
             <div class="message agent fade-in">
-                <div class="bubble">Hola, soy <strong>Shaggy</strong>. ¿En qué te puedo ayudar?</div>
+                <div class="bubble">Hola, soy <strong>RUFÜS</strong>. ¿En qué te puedo ayudar?</div>
             </div>
         </div>
     </main>
